# bdk-sp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug_report.md  2_enhancement_request.md  3_minor_release.md  4_patch_release.md
.github/workflows/: coverage.yml  mutations.yml  rust.yml
cli/: justfile
cli/casts/: sp_flow.commented.cast
cli/flows/: sp_flow.sh
cli/v1/: Cargo.toml
cli/v2/: CHANGELOG.md  Cargo.toml
cli/v2/src/: main.rs
crates/silentpayments/: Cargo.toml
crates/silentpayments/src/: code.rs  hashes.rs  lib.rs  receive.rs  send.rs
crates/silentpayments/src/encoding/: mod.rs
crates/silentpayments/tests/: silentpayment_flows.rs
dleq/: CHANGELOG.md  Cargo.toml
dleq/src/: lib.rs
dleq/tests/functional_tests/: dleq_generate_proofs.rs  dleq_verify_proofs.rs  main.rs  serialization.rs
doc/tabconf7/: README.md  auto_playbook.sh  flake.nix  justfile  non_nix_playbook.sh  presentation.md  regtest_playbook.sh  signet_playbook.sh
example-crates/: justfile
example-crates/casts/: sp_flow.commented.cast  sp_flow.live.cast
example-crates/example_rust_silentpayments/: Cargo.toml
example-crates/example_rust_silentpayments/src/: lib.rs  main.rs
example-crates/example_silentpayments/: Cargo.toml
example-crates/example_silentpayments/src/: lib.rs  main.rs
example-crates/example_silentpayments/src/indexer/: mod.rs
example-crates/example_silentpayments_v2/: Cargo.toml
example-crates/example_silentpayments_v2/src/: main.rs
example-crates/flows/: sp_flow.sh
fuzz/: .gitignore  Cargo.toml
fuzz/seeds/: seed.txt
fuzz/src/: lib.rs  sp_code.rs
indexer/: CHANGELOG.md  Cargo.toml
indexer/src/: indexes.rs  lib.rs
indexer/src/v2/: indexes.rs  mod.rs
lib/: Cargo.toml  README.md
lib/src/: error.rs  lib.rs
lib/src/scan/: mod.rs
lib/src/send/: mod.rs
oracles/: CHANGELOG.md  Cargo.toml
oracles/src/: lib.rs
oracles/src/filters/: kyoto.rs  mod.rs
oracles/src/tweaks/: blindbit.rs  mod.rs
silentpayments/: CHANGELOG.md  Cargo.toml
silentpayments/src/: hashes.rs  lib.rs  receive.rs  send.rs
silentpayments/src/encoding/: error.rs  mod.rs
silentpayments/src/receive/: error.rs  mod.rs  scan.rs
silentpayments/src/send/: bip32.rs  bip352.rs  error.rs  mod.rs  psbt.rs
silentpayments/src/send/psbt/: mod.rs  sign.rs  tests.rs
silentpayments/tests/: integration_tests.rs  silentpayment_flows.rs
silentpayments/tests/functional_tests/: main.rs  receive_bip352_vectors.rs  send_bip352_vectors.rs  serialization.rs
silentpayments/tests/functional_tests/bip352_vectors/: receive.rs  send.rs
silentpayments/tests/integration_tests/: main.rs  psbt.rs  xpriv_sender.rs
wallet/: CHANGELOG.md  Cargo.toml
wallet/src/: lib.rs  signers.rs
