[workspace]
resolver = "2"
members = [
    "silentpayments",
    "example-crates/example_silentpayments", "dleq", "indexer", "fuzz", "wallet",
    "example-crates/example_silentpayments_v2", "oracles"
]
default-members = [
    "silentpayments", "dleq", "indexer",
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]

[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[profile.mutants]
inherits = "test"
debug = "none"
opt-level = 3
