[workspace]
resolver = "2"
members = [
    "silentpayments",
    "cli/v1", "cli/v2", "dleq", "indexer", "fuzz", "wallet", "oracles", "lib"
]
default-members = [
    "silentpayments", "dleq", "indexer",
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]

[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[profile.mutants]
inherits = "test"
debug = "none"
opt-level = 3
