[package]
name = "sp_fuzz"
version = "0.1.0"
edition = "2024"
publish = false
authors.workspace = true

[features]
afl_fuzz = ["afl"]
honggfuzz_fuzz = ["honggfuzz"]
libfuzzer_fuzz = ["libfuzzer-sys"]
stdin_fuzz = []

[dependencies]
bdk_sp = { version = "0.1.0", path = "../silentpayments" }
afl = { version = "0.12", optional = true }
honggfuzz = { version = "0.5", optional = true, default-features = false }
libfuzzer-sys = { version = "0.4", optional = true }

[lib]
name = "sp_fuzz"
path = "src/lib.rs"

[[bin]]
name = "sp_encoding"
path = "src/bin/sp_code_target.rs"

[lints.rust.unexpected_cfgs]
level = "forbid"
check-cfg = [
    "cfg(fuzzing)",
    "cfg(secp256k1_fuzz)",
    "cfg(hashes_fuzz)",
    "cfg(taproot)",
]
