[package]
name = "rust-bip352"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
bech32 = { version = "0.11.1" }
bitcoin-primitives = { version = "=1.0.0-rc.2" }
bitcoin-network-kind = { version = "0.1.0" }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
secp256k1 = { version = "0.32.0-beta.2", features = ["serde"]}


[features]
default = []
serde = ["dep:serde", "bitcoin-network-kind/serde", "secp256k1/serde"]

[dev-dependencies]
once_cell = "1.20.3"
serde_json = "1.0.140"

[lints]
workspace = true
