[package]
name = "bdk_sp"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-sp"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bitcoin = { version = "0.32.6", default-features = true }
serde = { version = "1", optional = true, features = ["derive", "rc"] }

[dev-dependencies]
anyhow = "1"
bdk_sp = { version = "0.1.0", path = ".", features = [ "serde" ] }
bdk_testenv = { version = "0.11.1" }
miniscript = { version = "12.0.0", default-features = true }
once_cell = "1.20.3"
serde_json = "1.0.140"

[features]
serde = ["dep:serde", "bitcoin/serde"]
psbt_sp_spend = []

[lints]
workspace = true
