[package]
name = "bdk_silentpayments"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.0", default-features = true }

[dev-dependencies]
anyhow = "1"
bdk_silentpayments = { version = "0.1.0", path = "." }
bdk_testenv = { version = "0.11.1" }
miniscript = { version = "12.0.0", default-features = true }
