[package]
name = "example_silentpayments"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_bitcoind_rpc = { version = "0.18.0" }
bdk_chain = { version = "0.21.1", features = ["miniscript", "serde"] }
bdk_file_store = { version = "0.18.1" }
bdk_testenv = { version = "0.11.1" }
bitcoin = "0.31.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
silentpayments = { version = "0.4.0" }
