[package]
name = "example_silentpayments"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_silentpayments = { version = "0.1.0", path = "../../silentpayments/", features = ["serde"]}
bdk_file_store = "0.19.0"
bdk_chain = { version =  "0.21.1", features = ["serde", "miniscript"]}
bdk_bitcoind_rpc = { version =  "0.18.0" }
miniscript = { version = "12.0.0", default-features = true }
serde_json = "1.0"
clap = { version = "4.5.17", features = ["derive", "env"] }
anyhow = "1"
bitcoin = { version = "0.32.0", features = ["base64"], default-features = false }
serde = "1.0.219"
rand = "0.9.0"
