[package]
name = "example_silentpayments_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_sp = { version = "0.1.0", path = "../../silentpayments/", features = ["serde", "psbt_sp_spend"]}
bdk_file_store = "0.21.0"
bdk_bitcoind_rpc = { version = "0.20.0" }
bdk_coin_select = { version = "0.4.0" }
miniscript = { version = "12.0.0", features = [ "base64" ]}
serde_json = "1.0"
clap = { version = "4.5.17", features = ["derive", "env"] }
anyhow = "1"
serde = "1.0.219"
rand = "0.9.0"
indexer = { version = "0.1.0", path = "../../indexer", features = ["serde"]}
bdk_sp_wallet = { version = "0.1.0", path = "../../wallet", features = ["serde"]}

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
